fix layout bug

--- a/app/assets/stylesheets/pages/_stats.scss
+++ b/app/assets/stylesheets/pages/_stats.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 18px 22px;
+  margin-top: 10%;
 }
 
 .card {
